@@ -1,3 +1,6 @@
+* Agents Monitoring: replace sending of full client state with hash of said 
+  state. This prevents a potential issue of hitting a maximum URL length limit 
+  due to unbounded size of agent list.
 * Calls Per Agent: clean up implementation to use SQL query parameters and 
   simplify the API. Fix average calculation. Fixes Elastix bug #1371.
 * Agents Monitoring: improve error handling when dialer process is shut down in
